Fixing dask cluster interface after casper update

--- a/nblibrary/surface.ipynb
+++ b/nblibrary/surface.ipynb
@@ -151,7 +151,7 @@
     "parallel = False\n",
     "if args.nw > 1:\n",
     "  parallel = True\n",
-    "  cluster = NCARCluster()\n",
+    "  cluster = NCARCluster(interface='ext')\n",
     "  cluster.scale(args.nw)\n",
     "  client = Client(cluster)\n",
     "  client"
